[gd_scene load_steps=10 format=3 uid="uid://7gjn5sdo3huv"]

[ext_resource type="PackedScene" uid="uid://bvyxbkgsc5jdj" path="res://assets/weapon_cannon.glb" id="1_1j8yt"]
[ext_resource type="Script" path="res://Scripts/cannon_turret.gd" id="1_duwch"]
[ext_resource type="PackedScene" uid="uid://d0hl7732akrs5" path="res://Scenes/Projectiles/cannonball.tscn" id="2_dvuwr"]
[ext_resource type="PackedScene" uid="uid://jfo6o27ouu3c" path="res://assets/towerRound_base.glb" id="2_x0f0r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="4_0kioe"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_s8usk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_x6ghx"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_ggeyd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3team"]
radius = 3.0

[node name="CannonTurret" type="Node3D"]
script = ExtResource("1_duwch")
projectile_scene = ExtResource("2_dvuwr")

[node name="Base" parent="." instance=ExtResource("2_x0f0r")]

[node name="Cannon" parent="." instance=ExtResource("1_1j8yt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.135499, 0)

[node name="projectile_spawn" type="Node3D" parent="Cannon"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.262046, -0.257948)

[node name="Range" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Range"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)
shape = SubResource("CylinderShape3D_3team")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("4_0kioe")

[node name="TurretState" type="Node" parent="StateChart"]
script = ExtResource("5_s8usk")
initial_state = NodePath("Searching")

[node name="Searching" type="Node" parent="StateChart/TurretState"]
script = ExtResource("6_x6ghx")

[node name="ToAcquiring" type="Node" parent="StateChart/TurretState/Searching"]
script = ExtResource("7_ggeyd")
to = NodePath("../../Acquiring")
event = &"to_acquiring_state"

[node name="Acquiring" type="Node" parent="StateChart/TurretState"]
script = ExtResource("6_x6ghx")

[node name="ToAttacking" type="Node" parent="StateChart/TurretState/Acquiring"]
script = ExtResource("7_ggeyd")
to = NodePath("../../Attacking")
event = &"to_attacking_state"

[node name="ToSearching" type="Node" parent="StateChart/TurretState/Acquiring"]
script = ExtResource("7_ggeyd")
to = NodePath("../../Searching")
event = &"to_searching_state"

[node name="Attacking" type="Node" parent="StateChart/TurretState"]
script = ExtResource("6_x6ghx")

[node name="ToSearching" type="Node" parent="StateChart/TurretState/Attacking"]
script = ExtResource("7_ggeyd")
to = NodePath("../../Searching")
event = &"to_searching_state"

[connection signal="area_entered" from="Range" to="." method="_on_range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_range_area_exited"]
[connection signal="state_processing" from="StateChart/TurretState/Searching" to="." method="_on_searching_state_processing"]
[connection signal="state_entered" from="StateChart/TurretState/Acquiring" to="." method="_on_acquiring_state_entered"]
[connection signal="state_physics_processing" from="StateChart/TurretState/Acquiring" to="." method="_on_acquiring_state_physics_processing"]
[connection signal="state_entered" from="StateChart/TurretState/Attacking" to="." method="_on_attacking_state_entered"]
[connection signal="state_physics_processing" from="StateChart/TurretState/Attacking" to="." method="_on_attacking_state_physics_processing"]
